--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -95,7 +95,7 @@
     <script>
         hljs.highlightAll();
     </script>
-    <script src="./src/colorTheme.js"></script>
+    <script src="../src/colorTheme.js"></script>
 </body>
 
 </html>
