--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>How to Integrate</title>
+    <title>How to Use</title>
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/comp-page.css" />
     <link rel="stylesheet" href="../css/utilities.css" />
