added login and register pages

--- a/pages/register.html
+++ b/pages/register.html
@@ -23,12 +23,19 @@
             </span>
         </a>
     </header>
-    <div class="container bg-primary pull-down-login">
-        <div class="row mt-5">
+    <div class="pull-down-register">
+        <div class="row mt-5 ">
             <div class="col-md-6 m-auto">
                 <div class="card card-body">
-                    <h1 class="text-center mb-3"></i> Login</h1>
-                    <form action="/users/login" method="POST">
+                    <h1 class="text-center mb-3">
+                        </i> Register
+                    </h1>
+
+                    <form action="/users/register" method="POST">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name" />
+                        </div>
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" class="form-control"
@@ -37,17 +44,21 @@
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" class="form-control"
-                                placeholder="Enter Password" />
+                                placeholder="Create Password" />
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <div class="form-group">
+                            <label for="password2">Confirm Password</label>
+                            <input type="password" id="password2" name="password2" class="form-control"
+                                placeholder="Confirm Password" />
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">
+                            Register
+                        </button>
                     </form>
-                    <p class="lead mt-4">
-                        No Account? <a href="./register.html">Register</a>
-                    </p>
+                    <p class="lead mt-4">Have An Account? <a href="./login.html">Login</a></p>
                 </div>
             </div>
         </div>
-
     </div>
     <script src="../src/colorTheme.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
