Scripted Avatar and rspective variations

--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -85,7 +85,7 @@
             <a href="" class="footer-button">
                 <img src="" alt="" />
             </a>
-            <a href="/pages/components/Avatar/avatar.html" class="footer-button">
+            <a href="./components/Avatar/avatar.html" class="footer-button">
                 Avatar
                 <img src="../images/forward-arrow.svg" alt="" />
             </a>
