Redirected github repo to new tab

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </p>
         <div class="button-home">
             <a href="./pages/howToUse.html"><button class="main-start">Get Started</button></a>
-            <a href="https://github.com/SalonSikdar/component-library"><button class="main-github">GitHub</button></a>
+            <a href="https://github.com/SalonSikdar/component-library" target="_blank"><button
+                    class="main-github">GitHub</button></a>
         </div>
     </main>
     <script src="./src/colorTheme.js"></script>
