--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -33,34 +33,34 @@
         <div class="nav-main-heading">Components</div>
         <ul class="nav-comp-section">
             <li class="component-links">
-                <a href="/pages/components/Avatar/avatar.html">Avatar</a>
+                <a href="./components/Avatar/avatar.html">Avatar</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Alert/alert.html">Alert</a>
+                <a href="./components/Alert/alert.html">Alert</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Badge/badge.html">Badge</a>
+                <a href="./components/Badge/badge.html">Badge</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Button/button.html">Button</a>
+                <a href="./components/Button/button.html">Button</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Card/card.html">Card</a>
+                <a href="./components/Card/card.html">Card</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Image/image.html">Image</a>
+                <a href="./components/Image/image.html">Image</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Input/input.html">Input</a>
+                <a href="./components/Input/input.html">Input</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Lists/lists.html">List</a>
+                <a href="./components/List/list.html">List</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Navigation/navigation.html">Navigation</a>
+                <a href="./components/Navigation/navigation.html">Navigation</a>
             </li>
             <li class="component-links">
-                <a href="/pages/components/Toast/toast.html">Toast</a>
+                <a href="./components/Toast/toast.html">Toast</a>
             </li>
             <li class="component-links"></li>
         </ul>
