--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -54,15 +54,26 @@
                 <a href="./components/Input/input.html">Input</a>
             </li>
             <li class="component-links">
-                <a href="./components/List/list.html">List</a>
+                <a href="../List/list.html">List</a>
             </li>
             <li class="component-links">
-                <a href="./components/Navigation/navigation.html">Navigation</a>
+                <a href="../Navigation/navigation.html">Navigation</a>
             </li>
             <li class="component-links">
-                <a href="./components/Toast/toast.html">Toast</a>
+                <a href="../Toast/toast.html">Toast</a>
             </li>
-            <li class="component-links"></li>
+            <li class="component-links">
+                <a href="../Text/text.html">Text</a>
+            </li>
+            <li class="component-links">
+                <a href="../Modal/modal.html">Modal</a>
+            </li>
+            <li class="component-links">
+                <a href="../Grid/grid.html">Grid</a>
+            </li>
+            <li class="component-links">
+                <a href="../Rating/rating.html">Rating</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
