--- a/pages/howToUse.html
+++ b/pages/howToUse.html
@@ -54,25 +54,25 @@
                 <a href="./components/Input/input.html">Input</a>
             </li>
             <li class="component-links">
-                <a href="../List/list.html">List</a>
+                <a href="./components/List/list.html">List</a>
             </li>
             <li class="component-links">
-                <a href="../Navigation/navigation.html">Navigation</a>
+                <a href="./components/Navigation/navigation.html">Navigation</a>
             </li>
             <li class="component-links">
-                <a href="../Toast/toast.html">Toast</a>
+                <a href="./components/Toast/toast.html">Toast</a>
             </li>
             <li class="component-links">
-                <a href="../Text/text.html">Text</a>
+                <a href="./components/Text/text.html">Text</a>
             </li>
             <li class="component-links">
-                <a href="../Modal/modal.html">Modal</a>
+                <a href="./components/Modal/modal.html">Modal</a>
             </li>
             <li class="component-links">
-                <a href="../Grid/grid.html">Grid</a>
+                <a href="./components/Grid/grid.html">Grid</a>
             </li>
             <li class="component-links">
-                <a href="../Rating/rating.html">Rating</a>
+                <a href="./components/Rating/rating.html">Rating</a>
             </li>
         </ul>
     </nav>
